fix dark mode bg and links

--- a/static/sass/_blog.scss
+++ b/static/sass/_blog.scss
@@ -31,7 +31,7 @@
     max-width: 420px;
 
     small {
-      color: $dark_color;
+      color: $dark_primary;
     }
   }
 
@@ -70,7 +70,7 @@
     justify-content: space-evenly;
 
     small {
-      color: $dark_color;
+      color: $dark_primary;
     }
   }
 }
