--- a/static/sass/_mediaqueries.scss
+++ b/static/sass/_mediaqueries.scss
@@ -35,7 +35,7 @@
       justify-content: flex-start;
 
       small {
-        color: $dark_color;
+        color: $dark_primary;
       }
     }
   }
