--- a/static/sass/_profile.scss
+++ b/static/sass/_profile.scss
@@ -67,7 +67,7 @@
 
 .comments {
   a:hover {
-    color: $dark_color;
+    color: $dark_primary;
     border-bottom: 2px solid;
   }
 }
